[package]
name = "sur2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
futures-lite = "2.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
surrealdb = "1.3.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
